<resources>
    <string name="app_name">MyDaily</string>
    <string name="action_sign_in_short">Register</string>
    <string name="email">Email</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="change_email">Change Email</string>
    <string name="change_password">Change Password</string>
    <string name="send_password_reset_email">Send Password reset email</string>
    <string name="remove_user">Remove user</string>
    <string name="new_pass">New Password</string>
    <string name="title_activity_profile">Firebase</string>
    <string name="title_activity_login">Sign in</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Fullname</string>
    <string name="btn_login">LOGIN</string>
    <string name="prompt_password">Please enter your password</string>
    <string name="btn_link_to_register">Not a member? Get registered in Firebase now!</string>
    <string name="btn_link_to_login">Already registered. Login Me!</string>
    <string name="title_activity_reset_password">ResetPasswordActivity</string>
    <string name="btn_forgot_password">Forgot your password?</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_back"><![CDATA[<< Back]]></string>
    <string name="hint_new_email">New Email</string>
    <string name="btn_change">Change</string>
    <string name="btn_send">Send</string>
    <string name="btn_remove">Remove</string>
    <string name="btn_sign_out">Sign Out</string>
    <string name="lbl_forgot_password">Forgot password?</string>
    <string name="forgot_password_msg">We just need your registered Email Id to sent you password reset instructions.</string>
    <string name="email_id">Email ID</string>
    <string name="btn_sign_google">Google</string>

    <string name="btn_rest_tv_one">Restaurant</string>
    <string name="btn_rest_tv_two">Need for a restaurant ?</string>
    <string name="btn_taxi_tv_one">Taxi</string>
    <string name="btn_taxi_tv_two">Need for a taxi ?</string>
    <string name="btn_kiosk_tv_one">Kiosk</string>
    <string name="btn_kiosk_tv_two">Need for a kiosk ?</string>
    <string name="btn_commander_tv_one">Address</string>
    <string name="btn_commander_tv_two">locate an address</string>
    <string name="Title_notification">test Title</string>
    <string name="message_notification">test notification</string>
    <string name="latitude">Double latitude</string>
    <string name="messageTaxi">you must have heecth or uber, INSTALL ?</string>
    <string name="message_telechargement">Download finish</string>
    <string name="Notification">Ceci est une notification</string>
    <string name="item_signup">Sign up</string>


</resources>
