<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout  xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:orientation="vertical"
android:background="#fcfcfc"
tools:context="com.esiea.mydaily.MainActivity">

<android.support.design.widget.AppBarLayout
    android:id="@+id/appbar"
    android:layout_width="match_parent"
    android:layout_height="180dp"
    android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

    <android.support.design.widget.CollapsingToolbarLayout
        android:id="@+id/collapsingtoolbar"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_scrollFlags="exitUntilCollapsed|scroll"
        app:contentScrim="?attr/colorPrimary"
        app:title="@string/app_name"
        app:expandedTitleMarginStart="48dp"
        app:expandedTitleMarginEnd="64dp"
        android:background="@drawable/mater">
        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbarid"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
            app:layout_collapseMode="pin"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize">

        </android.support.v7.widget.Toolbar>

    </android.support.design.widget.CollapsingToolbarLayout>

</android.support.design.widget.AppBarLayout>

<android.support.v4.widget.NestedScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="10dp"
        android:background="#fcfcfc"
        android:gravity="center"
        android:id="@+id/ll">

        <LinearLayout
            android:clipToPadding="false"
            android:gravity="center"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.v7.widget.CardView
                android:foreground="?android:attr/selectableItemBackground"
                android:clickable="true"
                android:id="@+id/bankcardId"
                android:layout_width="160dp"
                android:layout_height="190dp"
                android:layout_margin="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:gravity="center">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="120dp"
                        android:layout_weight="1"
                        android:layout_margin="2dp"
                        android:orientation="vertical"
                        android:background="@color/colorGrapeFruit"
                        >
                        <ImageView
                            android:layout_width="60dp"
                            android:layout_height="60dp"
                            android:layout_marginTop="20dp"
                            android:layout_gravity="center"
                            android:src="@drawable/iconerestaurant"
                            android:tint="@color/colorWhite"
                            />
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:padding="8dp"
                            android:layout_marginTop="30dp"
                            android:background="@color/colorGrapeFruitDark"
                            android:text="@string/btn_rest_tv_one"
                            android:textSize="18sp"
                            android:textAlignment="center"
                            android:textColor="@color/colorWhite"

                            />

                    </LinearLayout>
                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/lightgray"
                        android:layout_margin="10dp"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/btn_rest_tv_two"
                        android:padding="0dp"
                        android:textColor="@android:color/darker_gray"

                        />

                </LinearLayout>
            </android.support.v7.widget.CardView>
            <android.support.v7.widget.CardView
                android:foreground="?android:attr/selectableItemBackground"
                android:clickable="true"
                android:layout_width="160dp"
                android:layout_height="190dp"
                android:layout_margin="10dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:gravity="center">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="120dp"
                        android:layout_weight="1"
                        android:layout_margin="2dp"
                        android:orientation="vertical"
                        android:background="@color/colorFlower"
                        >
                        <ImageView
                            android:layout_width="80dp"
                            android:layout_height="60dp"
                            android:layout_marginTop="20dp"
                            android:layout_gravity="center"
                            android:src="@drawable/iconetaxi"
                            android:tint="@color/colorWhite"
                            />
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:padding="0dp"
                            android:layout_marginTop="30dp"
                            android:background="@color/colorFlowerDark"
                            android:text="@string/btn_taxi_tv_one"
                            android:textSize="18sp"
                            android:textAlignment="center"
                            android:textColor="@color/colorWhite"

                            />

                    </LinearLayout>
                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/lightgray"
                        android:layout_margin="10dp"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/btn_taxi_tv_two"
                        android:padding="0dp"
                        android:textColor="@android:color/darker_gray"/>

                </LinearLayout>
            </android.support.v7.widget.CardView>

        </LinearLayout>

        <LinearLayout
            android:clipToPadding="false"
            android:gravity="center"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <android.support.v7.widget.CardView
                android:foreground="?android:attr/selectableItemBackground"
                android:clickable="true"
                android:layout_width="160dp"
                android:layout_height="190dp"
                android:layout_margin="10dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:gravity="center">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="120dp"
                        android:layout_margin="2dp"
                        android:layout_weight="1"
                        android:background="@color/colorBlueJeans"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="60dp"
                            android:layout_height="60dp"
                            android:layout_gravity="center"
                            android:layout_marginTop="20dp"
                            android:src="@drawable/iconkiosk"
                            android:tint="@color/colorWhite" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginTop="30dp"
                            android:background="@color/colorBlueJeansDark"
                            android:padding="3dp"
                            android:text="@string/btn_kiosk_tv_one"
                            android:textAlignment="center"
                            android:textColor="@color/colorWhite"
                            android:textSize="18sp"
                            android:id="@+id/idkiosk"/>

                    </LinearLayout>
                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/lightgray"
                        android:layout_margin="10dp"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/btn_taxi_tv_two"
                        android:padding="5dp"
                        android:textColor="@android:color/darker_gray"/>

                </LinearLayout>
            </android.support.v7.widget.CardView>
            <android.support.v7.widget.CardView
                android:foreground="?android:attr/selectableItemBackground"
                android:clickable="true"
                android:layout_width="160dp"
                android:layout_height="190dp"
                android:layout_margin="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="120dp"
                        android:layout_weight="1"
                        android:layout_margin="2dp"
                        android:orientation="vertical"
                        android:background="@color/colorAqua"
                        >
                        <ImageView
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:layout_marginTop="20dp"
                            android:layout_gravity="center"
                            android:src="@drawable/ic_icon_volleyball"
                            android:tint="@color/colorWhite"
                            />
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:padding="8dp"
                            android:layout_marginTop="30dp"
                            android:background="@color/colorAquaDark"
                            android:text="Volleyball"
                            android:textSize="18sp"
                            android:textAlignment="center"
                            android:textColor="@color/colorWhite"
                            />

                    </LinearLayout>
                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_margin="10dp"
                        android:background="@color/lightgray" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:padding="5dp"
                        android:text="Check your bank activities"
                        android:textColor="@android:color/darker_gray" />

                </LinearLayout>
            </android.support.v7.widget.CardView>

        </LinearLayout>
        <LinearLayout
            android:clipToPadding="false"
            android:gravity="center"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.v7.widget.CardView
                android:id="@+id/settingcardview"
                android:foreground="?android:attr/selectableItemBackground"
                android:clickable="true"
                android:layout_width="340dp"
                android:layout_height="150dp"
                android:layout_margin="10dp">
                <LinearLayout

                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:gravity="center">
                    <ImageView
                        android:layout_width="44dp"
                        android:layout_height="44dp"
                        android:background="@drawable/cerclebackgroundpurple"
                        android:src="@drawable/iconsetting"
                        android:padding="10dp"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"
                        android:layout_marginTop="10dp"
                        android:text="Settings"/>
                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/lightgray"
                        android:layout_margin="10dp"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="Check your bank activities"
                        android:padding="5dp"
                        android:textColor="@android:color/darker_gray"/>

                </LinearLayout>
            </android.support.v7.widget.CardView>


        </LinearLayout>
    </LinearLayout>

</android.support.v4.widget.NestedScrollView>

</android.support.design.widget.CoordinatorLayout>
